--- a/deepcell_tracking.ipynb
+++ b/deepcell_tracking.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -11,8 +13,8 @@
      "text": [
       "/home/mo/.local/lib/python3.9/site-packages/scipy/__init__.py:138: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.24.3)\n",
       "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion} is required for this version of \"\n",
-      "2023-06-20 11:56:07.821232: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/mo/anaconda3/envs/cell/lib/python3.9/site-packages/cv2/../../../../lib:\n",
-      "2023-06-20 11:56:07.821257: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
+      "2023-06-27 14:58:22.897717: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/mo/anaconda3/envs/cell/lib/python3.9/site-packages/cv2/../../../../lib:\n",
+      "2023-06-27 14:58:22.898746: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
       "/home/mo/anaconda3/envs/cell/lib/python3.9/site-packages/torchvision/io/image.py:13: UserWarning: Failed to load image Python extension: /home/mo/anaconda3/envs/cell/lib/python3.9/site-packages/torchvision/image.so: undefined symbol: _ZN2at4_ops19empty_memory_format4callEN3c108ArrayRefIlEENS2_8optionalINS2_10ScalarTypeEEENS5_INS2_6LayoutEEENS5_INS2_6DeviceEEENS5_IbEENS5_INS2_12MemoryFormatEEE\n",
       "  warn(f\"Failed to load image Python extension: {e}\")\n"
      ]
@@ -57,18 +59,40 @@
    "outputs": [],
    "source": [
     "\n",
-    "def ctc_2_CNet_track(path_X,suff_X,path_Y,suff_Y,start_ind,prompt='hela_ctc',alt=0,save_dir='/home/mo/Desktop/IWR/Cell_GT_Proj/CNet_track/',test=False):\n",
+    "def ctc_2_CNet_track(path_X,suff_X,path_Y,suff_Y,start_ind,prompt='hela_ctc',alt=0,save_dir_org='/home/mo/Desktop/IWR/Cell_GT_Proj/CNet_cells_track/',test=False,step=1,specific_i=None):\n",
     "    \n",
-    "    data=[]\n",
+    "    #data=[]\n",
+    "    test_entries = []\n",
+    "    train_entries = []\n",
     "    l_ind=start_ind\n",
-    "    for i in range(350):\n",
+    "    if specific_i is not None:\n",
+    "        end=1\n",
+    "    else:\n",
+    "        end=350\n",
+    "        \n",
+    "    for i in range(end):\n",
+    "        test=False\n",
+    "        save_dir=save_dir_org\n",
+    "        \n",
     "        \n",
     "        try:\n",
-    "            ind=i+1\n",
+    "            \n",
+    "            ind=i+step\n",
     "            path_r_X0 = path_X + suff_X + '{:03d}'.format(ind) + '.tif'\n",
     "            path_r_Y0 = path_Y + suff_Y + '{:03d}'.format(ind) + '.tif'\n",
     "            path_r_X1 = path_X + suff_X + '{:03d}'.format(i) + '.tif'\n",
     "            path_r_Y1 = path_Y + suff_Y + '{:03d}'.format(i) + '.tif'\n",
+    "            \n",
+    "            if specific_i is not None:\n",
+    "            \n",
+    "                path_r_X0 = path_X + suff_X + '{:03d}'.format(specific_i+1) + '.tif'\n",
+    "                path_r_Y0 = path_Y + suff_Y + '{:03d}'.format(specific_i+1) + '.tif'\n",
+    "                path_r_X1 = path_X + suff_X + '{:03d}'.format(specific_i) + '.tif'\n",
+    "                path_r_Y1 = path_Y + suff_Y + '{:03d}'.format(specific_i) + '.tif'\n",
+    "              \n",
+    "                \n",
+    "                \n",
+    "                \n",
     "\n",
     "            img_r_X0 = tiff.imread(path_r_X0)\n",
     "            img_r_Y0 = tiff.imread(path_r_Y0)\n",
@@ -78,29 +102,37 @@
     "            max_X = np.max(img_r_X0)\n",
     "            img_r_X0 = (img_r_X0/max_X)*255\n",
     "            img_r_X1 = (img_r_X1/max_X)*255\n",
+    "            \n",
+    "         \n",
     "\n",
-    "            if prompt == 'fluo_ctc, cell, microscopy image, grayscale':\n",
-    "                if path_X=='/home/mo/Desktop/IWR/Cell_GT_Proj/CTC_datasets/Fluo-C2DL-Huh7/02/' and i==17:\n",
-    "                    start_x = 300\n",
-    "                    end_x = start_x + 512\n",
-    "                    start_y = 256\n",
-    "                    end_y = start_y + 512\n",
-    "                    print('i_split',str(start_ind + i)+'_'+ str(i))\n",
-    "                else:\n",
-    "                    start_x = np.random.randint(0, img_r_X0.shape[1] - 512)\n",
-    "                    end_x = start_x + 512\n",
-    "                    start_y = np.random.randint(0, img_r_X0.shape[0] - 512)\n",
-    "                    end_y = start_y + 512\n",
+    "            \n",
+    "         \n",
+    "            start_x = np.random.randint(0, img_r_X0.shape[1] - 512)\n",
+    "            end_x = start_x + 512\n",
+    "            start_y = np.random.randint(0, img_r_X0.shape[0] - 512)\n",
+    "            end_y = start_y + 512\n",
     "\n",
-    "                img_r_X0 = img_r_X0[start_y:end_y, start_x:end_x]\n",
-    "                img_r_X1 = img_r_X1[start_y:end_y, start_x:end_x]\n",
-    "                img_r_Y0 = img_r_Y0[start_y:end_y, start_x:end_x]\n",
-    "                img_r_Y1 = img_r_Y1[start_y:end_y, start_x:end_x]\n",
+    "            img_r_X0 = img_r_X0[start_y:end_y, start_x:end_x]\n",
+    "            img_r_X1 = img_r_X1[start_y:end_y, start_x:end_x]\n",
+    "            img_r_Y0 = img_r_Y0[start_y:end_y, start_x:end_x]\n",
+    "            img_r_Y1 = img_r_Y1[start_y:end_y, start_x:end_x]\n",
+    "\n",
+    "            \n",
+    "            probability = 0.1  # 10% probability\n",
+    "\n",
+    "            # Generate a random number between 0 and 1\n",
+    "            random_number = random.random()\n",
+    "\n",
+    "            # Check if the random number is less than the desired probability\n",
+    "            if random_number < probability:\n",
+    "                test=True\n",
+    "                #print('is_True',)\n",
     "                \n",
     "            if test:\n",
     "                save_dir='/home/mo/Desktop/IWR/Cell_GT_Proj/CNet_cells_track_rd/'\n",
     "                \n",
-    "            img_r_Y1=connect_matching_dots(img_r_Y0,img_r_Y1,path_Y,ind, img_r_X0,test=test)\n",
+    "            \n",
+    "            img_r_Y1=connect_matching_dots(img_r_Y0,img_r_Y1,path_Y,ind, img_r_X0)\n",
     "\n",
     "            fig, ax = plt.subplots()\n",
     "            im0 = ax.imshow(img_r_Y0, cmap='viridis')\n",
@@ -146,7 +178,14 @@
     "            }\n",
     "\n",
     "            # Append the entry to the data list\n",
-    "            data.append(entry)\n",
+    "            #data.append(entry)\n",
+    "            \n",
+    "            if test:\n",
+    "                test_entries.append(entry)\n",
+    "                \n",
+    "            else:\n",
+    "                train_entries.append(entry)\n",
+    "                \n",
     "\n",
     "            \n",
     "\n",
@@ -159,37 +198,43 @@
     "                 traceback.print_exc()\n",
     "                    #print(\"An error occurred:\", str(e))\n",
     "\n",
-    "        \n",
-    "        \n",
-    "    output_path = save_dir+\"/prompt.json\"    \n",
-    "    existing_data = []\n",
-    "\n",
-    "\n",
-    "\n",
-    "    # Read existing data from the JSON file, if it exists\n",
-    "    try:\n",
-    "        with open(output_path, \"r\") as infile:\n",
-    "            for line in infile:\n",
-    "                line = line.strip()  # Remove leading/trailing whitespaces\n",
-    "                if line:\n",
-    "                    data_j = json.loads(line)\n",
-    "                    existing_data.append(data_j)\n",
-    "    except FileNotFoundError:\n",
-    "        pass\n",
-    "\n",
-    "    #print('!!!!!!ex',existing_data)\n",
-    "    #print('!!!!!!dat',data)\n",
-    "    # Append new entries to the existing data\n",
-    "    existing_data=existing_data+data\n",
-    "    #print('!!!!!!ex2',existing_data)\n",
-    "\n",
-    "    # Write the updated data to the JSON file\n",
-    "    with open(output_path, \"w\") as outfile:\n",
-    "        for entry in existing_data:\n",
-    "            #print('ent',entry)\n",
-    "            json.dump(entry, outfile)\n",
-    "            outfile.write('\\n') \n",
+    "    save_list=['/home/mo/Desktop/IWR/Cell_GT_Proj/CNet_cells_track/','/home/mo/Desktop/IWR/Cell_GT_Proj/CNet_cells_track_rd/']    \n",
+    "    for h in range(2): \n",
+    "        save_dir=save_list[h]\n",
+    "        if h==0:\n",
+    "            data = train_entries\n",
+    "        else:\n",
+    "            data = test_entries\n",
     "    \n",
+    "        output_path = save_dir+\"/prompt.json\"    \n",
+    "        existing_data = []\n",
+    "\n",
+    "\n",
+    "\n",
+    "        # Read existing data from the JSON file, if it exists\n",
+    "        try:\n",
+    "            with open(output_path, \"r\") as infile:\n",
+    "                for line in infile:\n",
+    "                    line = line.strip()  # Remove leading/trailing whitespaces\n",
+    "                    if line:\n",
+    "                        data_j = json.loads(line)\n",
+    "                        existing_data.append(data_j)\n",
+    "        except FileNotFoundError:\n",
+    "            pass\n",
+    "\n",
+    "        #print('!!!!!!ex',existing_data)\n",
+    "        #print('!!!!!!dat',data)\n",
+    "        # Append new entries to the existing data\n",
+    "        existing_data=existing_data+data\n",
+    "        #print('!!!!!!ex2',existing_data)\n",
+    "\n",
+    "        # Write the updated data to the JSON file\n",
+    "        with open(output_path, \"w\") as outfile:\n",
+    "            for entry in existing_data:\n",
+    "                #print('ent',entry)\n",
+    "                json.dump(entry, outfile)\n",
+    "                outfile.write('\\n') \n",
+    "\n",
     "    return l_ind\n",
     "        \n",
     "    \n",
@@ -350,24 +395,25 @@
     "        return False, None\n",
     "\n",
     "\n",
-    "def connect_matching_dots(img1, img2,path,t,cells,test=False):#,cells,path):\n",
+    "def connect_matching_dots(img1, img2, path, t, cells, test=False):\n",
     "    # Find unique pixel values in both images\n",
     "    unique_values_1 = np.unique(img1)\n",
     "    unique_values_2 = np.unique(img2)\n",
     "\n",
-    "    # Create an output image for dots and arrows separately\n",
+    "    # Create an output image for dots and lines separately\n",
     "    output_img_dots = np.zeros_like(img1)\n",
-    "    output_img_arrows = np.zeros_like(img1)\n",
+    "    output_img_lines = np.zeros_like(img1)\n",
+    "    output_img_splits = np.zeros_like(img1)\n",
     "\n",
     "    # Initialize 3-channel image with zeros\n",
     "    output_img_dots = np.stack((output_img_dots,)*3, axis=-1)\n",
-    "    output_img_arrows = np.stack((output_img_arrows,)*3, axis=-1)\n",
+    "    output_img_lines = np.stack((output_img_lines,)*3, axis=-1)\n",
     "    output_img_splits = np.stack((np.zeros_like(img1),)*3, axis=-1)\n",
     "\n",
     "    # Draw dots in blue\n",
-    "    output_img_dots[:, :, 2] = cells  # RGB color for Blue  # RGB color for Blue\n",
+    "    output_img_dots[:, :, 2] = cells  # RGB color for Blue \n",
     "\n",
-    "    # Draw arrows in green\n",
+    "    # Draw lines and circles in green\n",
     "    for value in unique_values_1[unique_values_1 > 0]:\n",
     "        # Find the coordinates of matching dots in both images\n",
     "        coordinates_img1 = np.argwhere(img1 == value)\n",
@@ -375,24 +421,26 @@
     "\n",
     "        if coordinates_img2.size > 0: \n",
     "            coord1 = np.mean(coordinates_img1, axis=0, dtype=int)\n",
-    "            coord2 = np.mean(coordinates_img2, axis=0, dtype=int) # Select the first matching dot in img2\n",
+    "            coord2 = np.mean(coordinates_img2, axis=0, dtype=int)\n",
     "            if test:\n",
     "                coord2 = test_transform(coord1, coord2)\n",
-    "            cv2.arrowedLine(output_img_arrows, tuple(coord1[::-1]), tuple(coord2[::-1]), color=[0, 255, 0], thickness=2, tipLength=0.3)\n",
+    "            cv2.line(output_img_lines, tuple(coord1[::-1]), tuple(coord2[::-1]), color=[0, 255, 0], thickness=2)\n",
+    "            cv2.circle(output_img_lines, tuple(coord2[::-1]), 3, color=[0, 255, 0], thickness=-1)  # Filled circle\n",
     "        else:\n",
-    "            cs=check_split(path,t,value)\n",
-    "            print('cs',cs)\n",
+    "            cs = check_split(path, t, value)\n",
+    "            print('cs', cs)\n",
     "            if cs[0]:\n",
     "                coordinates_img1 = np.argwhere(img1 == value)\n",
     "                coordinates_img2 = np.argwhere(img2 == cs[1])\n",
     "                if coordinates_img2.size > 0: \n",
     "                    coord1 = np.mean(coordinates_img1, axis=0, dtype=int)\n",
-    "                    coord2 = np.mean(coordinates_img2, axis=0, dtype=int) # Select the first matching dot in img2\n",
+    "                    coord2 = np.mean(coordinates_img2, axis=0, dtype=int)\n",
     "                    \n",
-    "                    cv2.arrowedLine(output_img_splits, tuple(coord1[::-1]), tuple(coord2[::-1]), color=[255, 0, 0], thickness=2, tipLength=0.3)\n",
+    "                    cv2.line(output_img_splits, tuple(coord1[::-1]), tuple(coord2[::-1]), color=[255, 0, 0], thickness=2)\n",
+    "                    cv2.circle(output_img_splits, tuple(coord2[::-1]), 3, color=[255, 0, 0], thickness=-1)  # Filled circle\n",
     "\n",
-    "    # Stack images along the channel dimension: Red is empty, Green for arrows, Blue for dots\n",
-    "    output_img = output_img_dots + output_img_arrows + output_img_splits\n",
+    "    # Stack images along the channel dimension: Red for splits, Green for lines, Blue for dots\n",
+    "    output_img = output_img_dots + output_img_lines + output_img_splits\n",
     "    return output_img\n",
     "\n",
     "\n",
@@ -477,20 +525,36 @@
     "suff_Y='man_track'\n",
     "\n",
     "prompt_a='hela_ctc, cell, microscopy image, grayscale'\n",
-    "prompt_b='fluo_ctc, cell, microscopy image, grayscale'\n",
+    "prompt_b='fluo_ctc, cell, tracking, microscopy image, grayscale'\n",
     "\n",
     "alt=[0,1,2,3]\n",
-    "\n",
+    "steps=[1,3,5]\n",
     "l_ind=0\n",
+    "split_path_0=[3]\n",
+    "split_path_1=[23,17,25,14,26]\n",
     "\n",
-    "for k in range(len(path_X)):\n",
-    "    for h in range(len(alt)):\n",
-    "        if k < 2:\n",
-    "            prompt_ctc=prompt_a\n",
+    "for g in range(2):\n",
+    "    for k in range(len(path_X)):\n",
+    "        for q in steps:\n",
+    "            for h in range(len(alt)):\n",
+    "                if k < 2:\n",
+    "                    prompt_ctc=prompt_a\n",
+    "                else:\n",
+    "                    prompt_ctc=prompt_b\n",
+    "                l_ind=ctc_2_CNet_track(path_X[k],suff_X,path_Y[k],suff_Y,start_ind=l_ind,prompt=prompt_b,alt=alt[h],step=q)\n",
+    "            #print(l_ind)\n",
+    "\n",
+    "\n",
+    "        if k==0:\n",
+    "            split_i=split_path_0\n",
     "        else:\n",
-    "            prompt_ctc=prompt_b\n",
-    "        l_ind=ctc_2_CNet_track(path_X[k],suff_X,path_Y[k],suff_Y,start_ind=l_ind,prompt=prompt_b,alt=alt[h],test=True)\n",
-    "        print(l_ind)\n",
+    "            split_i=split_path_1\n",
+    "\n",
+    "        for t in split_i:\n",
+    "            l_ind=ctc_2_CNet_track(path_X[k],suff_X,path_Y[k],suff_Y,start_ind=l_ind,prompt=prompt_b,alt=alt[h],specific_i=t)\n",
+    "\n",
+    "\n",
+    "        \n",
     "        \n"
    ]
   },
