update deepcell to CNet V1.1

--- a/deepcell_tracking.ipynb
+++ b/deepcell_tracking.ipynb
@@ -13,8 +13,8 @@
      "text": [
       "/home/mo/.local/lib/python3.9/site-packages/scipy/__init__.py:138: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.24.3)\n",
       "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion} is required for this version of \"\n",
-      "2023-06-27 14:58:22.897717: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/mo/anaconda3/envs/cell/lib/python3.9/site-packages/cv2/../../../../lib:\n",
-      "2023-06-27 14:58:22.898746: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
+      "2023-07-07 22:10:35.305613: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/mo/anaconda3/envs/cell/lib/python3.9/site-packages/cv2/../../../../lib:\n",
+      "2023-07-07 22:10:35.305639: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
       "/home/mo/anaconda3/envs/cell/lib/python3.9/site-packages/torchvision/io/image.py:13: UserWarning: Failed to load image Python extension: /home/mo/anaconda3/envs/cell/lib/python3.9/site-packages/torchvision/image.so: undefined symbol: _ZN2at4_ops19empty_memory_format4callEN3c108ArrayRefIlEENS2_8optionalINS2_10ScalarTypeEEENS5_INS2_6LayoutEEENS5_INS2_6DeviceEEENS5_IbEENS5_INS2_12MemoryFormatEEE\n",
       "  warn(f\"Failed to load image Python extension: {e}\")\n"
      ]
@@ -49,7 +49,7 @@
     "\n",
     "from sklearn.cluster import KMeans\n",
     "\n",
-    "from skimage.transform import resize"
+    "from skimage.transform import resize\n"
    ]
   },
   {
@@ -424,8 +424,8 @@
     "            coord2 = np.mean(coordinates_img2, axis=0, dtype=int)\n",
     "            if test:\n",
     "                coord2 = test_transform(coord1, coord2)\n",
-    "            cv2.line(output_img_lines, tuple(coord1[::-1]), tuple(coord2[::-1]), color=[0, 255, 0], thickness=2)\n",
-    "            cv2.circle(output_img_lines, tuple(coord2[::-1]), 3, color=[0, 255, 0], thickness=-1)  # Filled circle\n",
+    "            cv2.line(output_img_lines, tuple(coord1[::-1]), tuple(coord2[::-1]), color=[0, 255, 0], thickness=3)\n",
+    "            cv2.circle(output_img_lines, tuple(coord2[::-1]), 8, color=[0, 255, 0], thickness=-1)  # Filled circle\n",
     "        else:\n",
     "            cs = check_split(path, t, value)\n",
     "            print('cs', cs)\n",
@@ -436,8 +436,8 @@
     "                    coord1 = np.mean(coordinates_img1, axis=0, dtype=int)\n",
     "                    coord2 = np.mean(coordinates_img2, axis=0, dtype=int)\n",
     "                    \n",
-    "                    cv2.line(output_img_splits, tuple(coord1[::-1]), tuple(coord2[::-1]), color=[255, 0, 0], thickness=2)\n",
-    "                    cv2.circle(output_img_splits, tuple(coord2[::-1]), 3, color=[255, 0, 0], thickness=-1)  # Filled circle\n",
+    "                    cv2.line(output_img_splits, tuple(coord1[::-1]), tuple(coord2[::-1]), color=[255, 0, 0], thickness=3)\n",
+    "                    cv2.circle(output_img_splits, tuple(coord2[::-1]), 8, color=[255, 0, 0], thickness=-1)  # Filled circle\n",
     "\n",
     "    # Stack images along the channel dimension: Red for splits, Green for lines, Blue for dots\n",
     "    output_img = output_img_dots + output_img_lines + output_img_splits\n",
