trained Siamese with artificial cells

--- a/CAT.ipynb
+++ b/CAT.ipynb
@@ -67,18 +67,18 @@
     "        return self.dropout(token_embedding + self.pos_embedding[:token_embedding.size(0), :])\n",
     "    \n",
     "    \n",
-    "def collate_fn(batch_len,PAD_IDX,train=True,recon=False,run=12):\n",
+    "def collate_fn(batch_len,PAD_IDX,train=True,recon=False,run=12,path0='.'):\n",
     "    #print('batch',len(batch),batch)\n",
     "    src1_batch, src2_batch, y_batch,d_batch = [], [], [], []\n",
     "    for j in range(batch_len):\n",
     "        \n",
     "        if train:\n",
-    "            E1,E2,A,D=loadgraph()\n",
+    "            E1,E2,A,D=loadgraph(path=path0)\n",
     "        elif recon:\n",
-    "            E1,E2,A,D=loadgraph(recon=True, train=False,run=run,t_r=j)\n",
+    "            E1,E2,A,D=loadgraph(recon=True, train=False,run=run,t_r=j,path=path0)\n",
     "            #print('recon')\n",
     "        else:\n",
-    "            E1,E2,A,D=loadgraph(train=False)\n",
+    "            E1,E2,A,D=loadgraph(train=False,path=path0)\n",
     "        #print('src_sample',src_sample)\n",
     "        src1_batch.append(E1)\n",
     "        #print('emb',src_batch[-1])\n",
@@ -103,7 +103,7 @@
     "    return src1_batch, src2_batch,y_batch,d_batch\n",
     "\n",
     "\n",
-    "def loadgraph(train=True,run=None,easy=False,recon=False,t_r=None):\n",
+    "def loadgraph(train=True,run=None,easy=False,recon=False,t_r=None,path='.'):\n",
     "    convert_tensor = transforms.ToTensor()\n",
     "    if train:\n",
     "        if run==None:\n",
@@ -1205,43 +1205,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'nn' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mCAT\u001b[39;00m(\u001b[43mnn\u001b[49m\u001b[38;5;241m.\u001b[39mModule):\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m,\n\u001b[1;32m      3\u001b[0m                  num_encoder_layers: \u001b[38;5;28mint\u001b[39m,\n\u001b[1;32m      4\u001b[0m                  emb_size: \u001b[38;5;28mint\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m      7\u001b[0m                  dim_feedforward: \u001b[38;5;28mint\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m512\u001b[39m,\n\u001b[1;32m      8\u001b[0m                  dropout: \u001b[38;5;28mfloat\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.05\u001b[39m,):\n\u001b[1;32m      9\u001b[0m         \u001b[38;5;28msuper\u001b[39m(CAT, \u001b[38;5;28mself\u001b[39m)\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__init__\u001b[39m()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'nn' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "class AdjacencyTransformer_2(nn.Module):\n",
+    "class CAT(nn.Module):\n",
     "    def __init__(self,\n",
     "                 num_encoder_layers: int,\n",
     "                 emb_size: int,\n",
     "                 nhead: int,\n",
     "                 out = False, \n",
     "                 dim_feedforward: int = 512,\n",
-    "                 dropout: float = 0.05):\n",
-    "        super(AdjacencyTransformer_2, self).__init__()\n",
+    "                 dropout: float = 0.05,\n",
+    "                 use_transformer: bool = True):\n",
+    "        super(CAT, self).__init__()\n",
     "        \n",
     "        \n",
     "        \n",
-    "        encoder_layer = nn.TransformerEncoderLayer(d_model=emb_size, nhead=nhead,dim_feedforward=dim_feedforward)\n",
+    "       \n",
     "        decoder_layer = nn.TransformerDecoderLayer(d_model=emb_size, nhead=nhead,dim_feedforward=dim_feedforward)\n",
     "        \n",
     "        \n",
-    "        self.decoder = nn.TransformerDecoder(decoder_layer, num_layers=num_encoder_layers)\n",
-    "        self.encoder = nn.TransformerEncoder(encoder_layer, num_layers=num_encoder_layers)\n",
+    "        self.decoder_1_1 = nn.TransformerDecoder(decoder_layer, num_layers=num_encoder_layers)\n",
+    "        self.decoder_1_2 = nn.TransformerDecoder(decoder_layer, num_layers=num_encoder_layers)\n",
+    "        self.decoder_2_1 = nn.TransformerDecoder(decoder_layer, num_layers=num_encoder_layers)\n",
+    "        self.decoder_2_2 = nn.TransformerDecoder(decoder_layer, num_layers=num_encoder_layers)\n",
+    "        \n",
     "        \n",
     "        \n",
     "        self.out=out \n",
     "        \n",
     "        self.sig = torch.nn.Sigmoid()\n",
     "        self.Ad = makeAdja()\n",
-    "        \n",
-    "        #self.lin = nn.Sequential(\n",
-    "        #    nn.Linear(input_dim, emb_size),\n",
-    "        #    nn.LeakyReLU())\n",
-    "        \n",
-    "        self.lin2 = nn.Sequential(\n",
-    "            nn.Linear(emb_size, emb_size),\n",
-    "            nn.LeakyReLU())\n",
-    "\n",
+    "        self.use_transformer=use_transformer\n",
     "    def forward(self,\n",
     "                src_t1: Tensor,\n",
     "                src_t2: Tensor,\n",
@@ -1250,38 +1258,39 @@
     "        \n",
     "        #print('trans_src_before_pos',src_t1,src_t1.size())\n",
     "        #print('trans_src_toke',self.src_tok_emb(src),self.src_tok_emb(src).size())\n",
-    "        #src_t1 = self.lin(src_t1)\n",
-    "        #src_t2 = self.lin(src_t2)\n",
     "        \n",
-    "        #src_t1 = self.lin2(src_t1)\n",
-    "        #src_t2 = self.lin2(src_t2)\n",
+    "        if not self.use_transformer:  # <-- Add this condition\n",
+    "            src_t1_t = torch.transpose(src_t1, 0, 1)\n",
+    "            src_t2_t = torch.transpose(src_t2, 0, 1)\n",
+    "            src_t2_t = torch.transpose(src_t2_t, 1, 2)\n",
+    "            z = self.sig(torch.bmm(src_t1_t, src_t2_t))\n",
+    "            Ad = self.Ad.forward(z, src_padding_mask1, src_padding_mask2)\n",
+    "            return Ad\n",
     "        \n",
     "        src1_emb = src_t1\n",
     "        src2_emb = src_t2\n",
     "        #print('src1',src1_emb.size())\n",
     "        #print('src2',src2_emb.size())\n",
     "        #print('trans_src_padd',src_padding_mask1,src_padding_mask1.size())\n",
-    "        out1 = self.encoder(src1_emb,src_key_padding_mask=src_padding_mask1)\n",
-    "        #print('out1',out1.size())\n",
-    "        out2 = self.encoder(src2_emb,src_key_padding_mask=src_padding_mask2)\n",
+    "        povi_1 = self.decoder_1_1(pos_1, vis_1,tgt_key_padding_mask=src_padding_mask2,memory_key_padding_mask=src_padding_mask1)\n",
+    "        povi_2 = self.decoder_1_2(pos_2, vis_2,tgt_key_padding_mask=src_padding_mask2,memory_key_padding_mask=src_padding_mask1)\n",
     "        \n",
-    "        out_dec1=self.decoder(out2, out1,tgt_key_padding_mask=src_padding_mask2,memory_key_padding_mask=src_padding_mask1)\n",
-    "        #print('out_dec1',out_dec1.size())\n",
-    "        #out_dec1=self.lin2(out_dec1)\n",
-    "        #print('out_dec1b',out_dec1.size())\n",
-    "        #out_dec2=self.decoder(out1, out2,tgt_key_padding_mask=src_padding_mask1,memory_key_padding_mask=src_padding_mask2)\n",
-    "        out_dec2=out1\n",
+    "        out_1 = self.decoder_2_1(povi_1, povi_2,tgt_key_padding_mask=src_padding_mask2,memory_key_padding_mask=src_padding_mask1)\n",
+    "        out_2 = self.decoder_2_2(povi_2, povi_1,tgt_key_padding_mask=src_padding_mask2,memory_key_padding_mask=src_padding_mask1)\n",
+    "        \n",
+    "\n",
     "        #out1=torch.transpose(out1,0,1)\n",
     "        #out2=torch.transpose(out2,0,1)\n",
     "        #out2=torch.transpose(out2,1,2)\n",
     "        \n",
     "        #z=self.sig(torch.bmm(out1,out2))\n",
     "        \n",
-    "        out_dec2=torch.transpose(out_dec2,0,1)\n",
-    "        out_dec1=torch.transpose(out_dec1,0,1)\n",
-    "        out_dec1=torch.transpose(out_dec1,1,2)\n",
     "        \n",
-    "        z=self.sig(torch.bmm(out_dec2,out_dec1))\n",
+    "        out_1=torch.transpose(out_1,0,1)\n",
+    "        out_2=torch.transpose(out_2,0,1)\n",
+    "        out_2=torch.transpose(out_2,1,2)\n",
+    "        \n",
+    "        z=self.sig(torch.bmm(out_1,out_2))\n",
     "        #print('z',z.size())\n",
     "        \n",
     "        Ad=self.Ad.forward(z,src_padding_mask1,src_padding_mask2)\n",
@@ -1316,10 +1325,10 @@
     "\n",
     "emb_size= 64 ###!!!!24 for n2v emb\n",
     "nhead= 4    ####!!!! 6 for n2v emb\n",
-    "num_encoder_layers = 3\n",
+    "num_encoder_layers = 2\n",
     "\n",
     "\n",
-    "transformer = AdjacencyTransformer_2(num_encoder_layers, emb_size, nhead)\n",
+    "transformer = CAT(num_encoder_layers, emb_size, nhead)\n",
     "\n",
     "\n",
     "\n",
@@ -5266,6 +5275,7 @@
    "source": [
     "#recon+testerror\n",
     "for r in range(1,3):\n",
+    "    r=8\n",
     "    src1, src2, y,d = collate_fn(31,-100,recon=True,train=False,run=r)\n",
     "\n",
     "    #print(src1.size())\n",
