--- a/CTC2pos_GT.ipynb
+++ b/CTC2pos_GT.ipynb
@@ -9,7 +9,8 @@
     "import os\n",
     "from PIL import Image\n",
     "import numpy as np\n",
-    "from tifffile import imread"
+    "from tifffile import imread\n",
+    "import random"
    ]
   },
   {
@@ -41,7 +42,7 @@
     "        coords_and_ids.append((mean_x, mean_y, cell_id))\n",
     "    \n",
     "    return coords_and_ids\n",
-    "\n",
+    "'''\n",
     "def process_folder(directory):\n",
     "    for folder in os.listdir(directory):\n",
     "        if folder.endswith('_GT'):\n",
@@ -75,7 +76,52 @@
     "                for x, y, r, cell_id, split_id, s_prob, t in output_data:\n",
     "                    f.write(f\"{x}\\t{y}\\t{r}\\t{cell_id}\\t{split_id}\\t{s_prob}\\t{t}\\n\")\n",
     "\n",
+    "'''\n",
+    "def process_folder(directory):\n",
+    "    for folder in os.listdir(directory):\n",
+    "        if folder.endswith('_GT'):\n",
+    "            tra_folder = os.path.join(directory, folder, 'TRA')\n",
+    "            \n",
+    "            # Load track info\n",
+    "            with open(os.path.join(tra_folder, 'man_track.txt'), 'r') as f:\n",
+    "                lines = f.readlines()\n",
     "\n",
+    "            track_info = {}\n",
+    "            for line in lines:\n",
+    "                L, B, E, P = map(int, line.strip().split())\n",
+    "                track_info[L] = (B, E, P)\n",
+    "\n",
+    "            output_data = []\n",
+    "            tif_files = sorted([f for f in os.listdir(tra_folder) if f.startswith('man_track') and f.endswith('.tif')])\n",
+    "            \n",
+    "            for tif_file in tif_files:\n",
+    "                frame_number = int(tif_file[len(\"man_track\"):-len(\".tif\")])\n",
+    "                coords_and_ids = get_coordinates_and_ids_from_tif(os.path.join(tra_folder, tif_file))\n",
+    "                \n",
+    "                for x, y, cell_id in coords_and_ids:\n",
+    "                    B, E, P = track_info[cell_id]\n",
+    "                    if B <= frame_number <= E:\n",
+    "                        # Set split_id only for the frame where the split happens\n",
+    "                        split_id = P if (P and B == frame_number) else 0\n",
+    "                        output_data.append((x, y, 1, cell_id, split_id, 1, frame_number))\n",
+    "\n",
+    "            # Group data by 't' and shuffle within each group\n",
+    "            grouped_data = {}\n",
+    "            for row in output_data:\n",
+    "                t = row[-1]\n",
+    "                if t not in grouped_data:\n",
+    "                    grouped_data[t] = []\n",
+    "                grouped_data[t].append(row)\n",
+    "\n",
+    "            shuffled_data = []\n",
+    "            for t in sorted(grouped_data.keys()):\n",
+    "                random.shuffle(grouped_data[t])\n",
+    "                shuffled_data.extend(grouped_data[t])\n",
+    "\n",
+    "            with open(os.path.join(tra_folder, 'pos_GT.txt'), 'w') as f:\n",
+    "                f.write(\"# x\\ty\\tr\\tid\\tsplit_id\\ts_prob\\tt\\n\")\n",
+    "                for x, y, r, cell_id, split_id, s_prob, t in shuffled_data:\n",
+    "                    f.write(f\"{x}\\t{y}\\t{r}\\t{cell_id}\\t{split_id}\\t{s_prob}\\t{t}\\n\")\n",
     "\n"
    ]
   },
@@ -85,7 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "directory = '/media/mo/Label/HUH_01_t/'\n",
+    "directory = '/home/mo/Desktop/IWR/Cell_GT_Proj/CTC_datasets/Fluo-C2DL-Huh7/'\n",
     "process_folder(directory)"
    ]
   },
