--- a/clean_scale_segment.ipynb
+++ b/clean_scale_segment.ipynb
@@ -10,7 +10,10 @@
     "import cv2\n",
     "import glob\n",
     "from tqdm import tqdm\n",
-    "import random"
+    "import random\n",
+    "import numpy as np\n",
+    "import tifffile\n",
+    "import shutil"
    ]
   },
   {
@@ -64,6 +67,7 @@
     "    mask_files = glob.glob(os.path.join(folder_path, '*_masks.png'))\n",
     "    seg_folder_path = os.path.join(os.path.dirname(folder_path), os.path.basename(folder_path) + \"_ST\", \"SEG\")\n",
     "    os.makedirs(seg_folder_path, exist_ok=True)\n",
+    "    print('saved to',seg_folder_path)\n",
     "    for mask_file in mask_files:\n",
     "        filename = os.path.basename(mask_file)  # Extract only the filename from the full path\n",
     "        new_name = \"man_seg\" + filename.split('_')[0][1:] + \".tif\"\n",
@@ -73,21 +77,152 @@
     "\n",
     "        # Save the image as a TIFF file\n",
     "        cv2.imwrite(os.path.join(seg_folder_path, new_name), image)\n",
-    "\n",
+    "        #print('saved to',seg_folder_path)\n",
     "        # Remove the original PNG file\n",
     "        os.remove(mask_file)\n",
-    "def process_directory(base_directory, target_width=1024, path_pretrained='', model_name=''):\n",
+    "def process_directory(base_directory, target_width=1024, path_pretrained='', model_name='',r=10):\n",
     "    sub_folders = [name for name in os.listdir(base_directory) if os.path.isdir(os.path.join(base_directory, name))]\n",
     "    for sub_folder in tqdm(sorted(sub_folders)):\n",
-    "        if not sub_folder.endswith(\"_GT\"):\n",
-    "            upscale_images_in_folder(os.path.join(base_directory, sub_folder), target_width, path_pretrained, model_name)"
+    "        if not sub_folder.endswith(\"_GT\") and not sub_folder.endswith(\"_ST\"):\n",
+    "            print('sub_folder',sub_folder)\n",
+    "            if sub_folder=='1':\n",
+    "                print(stop)\n",
+    "            upscale_images_in_folder(os.path.join(base_directory, sub_folder), target_width, path_pretrained, model_name)\n",
+    "            \n",
+    "            # Paths for segmentation and ground truth\n",
+    "            seg_folder = os.path.join(base_directory, sub_folder+ \"_ST\", 'SEG')\n",
+    "            gt_folder = os.path.join(base_directory, sub_folder + \"_GT\", 'TRA')\n",
+    "            # Loop through each segmentation mask\n",
+    "            for seg_file in glob.glob(os.path.join(seg_folder, 'man_seg*.tif')):\n",
+    "                # Extract timeframe from the filename\n",
+    "                timeframe = str(int(os.path.basename(seg_file).split('seg')[1].split('.')[0]))\n",
+    "                print('tf',timeframe)\n",
+    "                # Corresponding ground truth detection filename\n",
+    "                gt_file_name = 'man_track' + timeframe + '.tif'\n",
+    "                gt_file_path = os.path.join(gt_folder, gt_file_name)\n",
+    "                \n",
+    "                new_timeframe = str(timeframe).zfill(3) # Ensure three digits\n",
+    "                new_name = 'man_track' + new_timeframe + '.tif'\n",
+    "                print('nn',new_name,gt_file_path)\n",
+    "                new_path = os.path.join(os.path.dirname(gt_file_path), new_name)\n",
+    "                try:\n",
+    "                    os.rename(gt_file_path, new_path)\n",
+    "                except:\n",
+    "                    pass\n",
+    "                \n",
+    "                \n",
+    "                # Rename the detection file to the desired format\n",
+    "                #new_gt_file_name = 'man_seg' + timeframe + '.tif'\n",
+    "                new_gt_file_path = os.path.join(gt_folder, new_name)\n",
+    "                #os.rename(gt_file_path, new_gt_file_path)\n",
+    "                \n",
+    "                # Process masks\n",
+    "                corrected_mask = process_masks(seg_file, new_gt_file_path,radius=r)\n",
+    "                cv2.imwrite(seg_file, corrected_mask)  # Overwrite the segmentation mask in the SEG folder\n",
+    "            \n",
+    "    #clean_up(base_directory)\n",
+    "            \n",
+    "def process_masks(segmentation_mask_path, detection_gt_path, radius=10):\n",
+    "    # Load the images\n",
+    "    mask_img = tifffile.imread(segmentation_mask_path)\n",
+    "    gt_img = tifffile.imread(detection_gt_path)\n",
+    "\n",
+    "    # Ensure the images are of the same shape\n",
+    "    if mask_img.shape != gt_img.shape:\n",
+    "        raise ValueError(\"Segmentation mask and ground truth images must have the same shape.\")\n",
+    "\n",
+    "    unique_masks = np.unique(mask_img)\n",
+    "    print('seg,det,unique',segmentation_mask_path,detection_gt_path,unique_masks)\n",
+    "    #print(stop)\n",
+    "    # For each unique value in segmentation mask, check if it overlaps with the detection ground truth\n",
+    "    for mask_val in unique_masks:\n",
+    "        if mask_val == 0:  # Ignore background\n",
+    "            continue\n",
+    "\n",
+    "        mask_coords = np.where(mask_img == mask_val)\n",
+    "        gt_overlap = gt_img[mask_coords]\n",
+    "\n",
+    "        # Check if any of the mask's coordinates overlap with the ground truth\n",
+    "        if np.sum(gt_overlap) == 0:\n",
+    "            mask_img[mask_coords] = 0\n",
+    "    \n",
+    "    \n",
+    "    unique_circs = np.unique(gt_img)\n",
+    "\n",
+    "    # For each unique value in segmentation mask, check if it overlaps with the detection ground truth\n",
+    "    for mask_val in unique_circs:\n",
+    "        if mask_val == 0:  # Ignore background\n",
+    "            continue\n",
+    "\n",
+    "        mask_coords = np.where(gt_img == mask_val)\n",
+    "        seg_overlap = mask_img[mask_coords]\n",
+    "\n",
+    "        # Check if any of the mask's coordinates overlap with the ground truth\n",
+    "        if np.sum(seg_overlap) == 0:\n",
+    "            \n",
+    "            x_min, x_max = np.min(mask_coords[1]), np.max(mask_coords[1])\n",
+    "            y_min, y_max = np.min(mask_coords[0]), np.max(mask_coords[0])\n",
+    "\n",
+    "            # Calculate the center of the bounding box\n",
+    "            center_x = (x_max + x_min) // 2\n",
+    "            center_y = (y_max + y_min) // 2\n",
+    "\n",
+    "            # Create a new unique label and draw a circle at the bounding box's center\n",
+    "            new_label = int(mask_img.max() + 1)\n",
+    "            cv2.circle(mask_img, (center_x, center_y), radius, new_label, -1)\n",
+    "\n",
+    "\n",
+    "    return mask_img\n",
+    "\n",
+    "\n",
+    "def clean_up(base_directory):\n",
+    "    # Rename folders with names '1' to '9' to add leading zeros\n",
+    "    for i in range(1, 10):\n",
+    "        old_name = str(i)\n",
+    "        new_name = str(i).zfill(2)\n",
+    "        \n",
+    "        # Check if folders exist before renaming\n",
+    "        for suffix in [\"\", \"_GT\", \"_ST\"]:\n",
+    "            old_folder = os.path.join(base_directory, old_name + suffix)\n",
+    "            new_folder = os.path.join(base_directory, new_name + suffix)\n",
+    "            \n",
+    "            if os.path.exists(old_folder):\n",
+    "                os.rename(old_folder, new_folder)\n",
+    "\n",
+    "    # Deleting specified folders and files\n",
+    "    gt_folders = [name for name in os.listdir(base_directory) if name.endswith(\"_GT\")]\n",
+    "    for folder in gt_folders:\n",
+    "        path_to_folder = os.path.join(base_directory, folder)\n",
+    "        \n",
+    "        # Delete COND and ID subfolders if they exist\n",
+    "        for subfolder in [\"COND\", \"ID\"]:\n",
+    "            full_path = os.path.join(path_to_folder, subfolder)\n",
+    "            if os.path.exists(full_path):\n",
+    "                shutil.rmtree(full_path)\n",
+    "                \n",
+    "        # Delete pos_GT.txt in TRA subfolder\n",
+    "        pos_gt_file = os.path.join(path_to_folder, \"TRA\", \"pos_GT.txt\")\n",
+    "        if os.path.exists(pos_gt_file):\n",
+    "            os.remove(pos_gt_file)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'stop' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Example usage:\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mstop\u001b[49m)\n\u001b[1;32m      3\u001b[0m base_directory_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/media/mo/KINGSTON/Generated/HUH\u001b[39m\u001b[38;5;124m'\u001b[39m  \u001b[38;5;66;03m# Change this to your actual directory\u001b[39;00m\n\u001b[1;32m      4\u001b[0m path_pretrained \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/media/mo/KINGSTON/cellpose_train/HUH/models/\u001b[39m\u001b[38;5;124m'\u001b[39m    \u001b[38;5;66;03m# Change to the actual path\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'stop' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Example usage:\n",
     "print(stop)\n",
@@ -95,7 +230,8 @@
     "path_pretrained = '/media/mo/KINGSTON/cellpose_train/HUH/models/'    # Change to the actual path\n",
     "model_name = 'cellpose_residual_on_style_on_concatenation_off_HUH_2023_10_17_19_44_40.452432'                        # Change to the actual model name\n",
     "target_width_value = 1024\n",
-    "process_directory(base_directory_path, target_width_value, path_pretrained, model_name)"
+    "r=33\n",
+    "process_directory(base_directory_path, target_width_value, path_pretrained, model_name,r)"
    ]
   },
   {
@@ -103,39 +239,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def process_masks(segmentation_mask_path, detection_gt_path, radius=10):\n",
-    "    # Load the images\n",
-    "    mask_img = cv2.imread(segmentation_mask_path, cv2.IMREAD_GRAYSCALE)\n",
-    "    gt_img = cv2.imread(detection_gt_path, cv2.IMREAD_GRAYSCALE)\n",
-    "\n",
-    "    # Ensure the images are of the same shape\n",
-    "    if mask_img.shape != gt_img.shape:\n",
-    "        raise ValueError(\"Segmentation mask and ground truth images must have the same shape.\")\n",
-    "\n",
-    "    unique_masks = np.unique(mask_img)\n",
-    "\n",
-    "    # For each unique value in segmentation mask, check if it overlaps with the detection ground truth\n",
-    "    for mask_val in unique_masks:\n",
-    "        if mask_val == 0:  # Ignore background\n",
-    "            continue\n",
-    "        overlap = np.sum((mask_img == mask_val) & (gt_img > 0))\n",
-    "        if overlap == 0:  # If no overlap, remove the entire mask\n",
-    "            mask_img[mask_img == mask_val] = 0\n",
-    "\n",
-    "    # For each detection ground truth circle, if no overlapping mask, draw a new circle\n",
-    "    y, x = np.where(gt_img > 0)\n",
-    "    for i in range(len(x)):\n",
-    "        if mask_img[y[i], x[i]] == 0:\n",
-    "            new_label = mask_img.max() + 1  # Get a new unique label\n",
-    "            cv2.circle(mask_img, (x[i], y[i]), radius, new_label, -1)\n",
-    "\n",
-    "    return mask_img\n",
-    "\n",
-    "# Test the function\n",
-    "corrected_mask = process_masks('path_to_segmentation_mask.tif', 'path_to_detection_ground_truth.tif', radius=10)\n",
-    "cv2.imwrite('corrected_mask.tif', corrected_mask.astype(np.uint8))"
-   ]
+   "source": []
   }
  ],
  "metadata": {
